<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		frame_3
	 *	@date 		Wednesday 24th of May 2023 09:25:48 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/frame_3" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_frame_3_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__frame_3_ek2"
					android:background="@drawable/_bg__frame_3_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="411dp"
					android:layout_height="731dp" />

				<ImageView android:id="@+id/top_background_3"
					android:src="@drawable/top_background_3"
					android:contentDescription="top_background_3"
					 android:layout_marginStart="-111dp"
					android:layout_marginTop="-196dp"
					android:layout_width="590dp"
					android:layout_height="426dp" />

				<TextView android:id="@+id/login_to__your_account"
					android:textStyle="bold"
					android:textSize="36sp"
					android:textColor="@color/_bg__frame_3_ek2_color"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="35dp"
					android:layout_width="329dp"
					android:layout_height="144dp"
					android:text="@string/login_to__your_account_string"
					 />

				<TextView android:id="@+id/your_email"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/your_email_color"
					android:layout_marginLeft="9dp"
					android:layout_marginTop="245dp"
					android:layout_width="138dp"
					android:layout_height="44dp"
					android:text="@string/your_email_string"
					 />

				<View   android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="23dp"
					android:layout_marginTop="282dp"
					android:layout_width="338dp"
					android:layout_height="45dp" />

				<TextView android:id="@+id/enter_your_email"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/enter_your_email_color"
					android:layout_marginLeft="9dp"
					android:layout_marginTop="287dp"
					android:layout_width="179dp"
					android:layout_height="33.5dp"
					android:text="@string/enter_your_email_string"
					 />

				<TextView android:id="@+id/your_password"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/your_email_color"
					android:layout_marginLeft="9dp"
					android:layout_marginTop="334dp"
					android:layout_width="181dp"
					android:layout_height="44dp"
					android:text="@string/your_password_string"
					 />

				<TextView android:id="@+id/forget_password__"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/your_email_color"
					android:layout_marginLeft="178dp"
					android:layout_marginTop="420dp"
					android:layout_width="196dp"
					android:layout_height="41dp"
					android:text="@string/forget_password___string"
					 />

				<View   android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="23dp"
					android:layout_marginTop="372dp"
					android:layout_width="338dp"
					android:layout_height="45dp" />

				<TextView android:id="@+id/enter_your_password"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/enter_your_email_color"
					android:layout_marginLeft="9dp"
					android:layout_marginTop="379dp"
					android:layout_width="218dp"
					android:layout_height="33.5dp"
					android:text="@string/enter_your_password_string"
					 />

				<View   android:id="@+id/rectangle_6"
					android:background="@drawable/rectangle_6_shape"
					 android:layout_marginStart="33dp"
					android:layout_marginTop="543dp"
					android:layout_width="324dp"
					android:layout_height="44dp" />

				<TextView android:id="@+id/register"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/_bg__frame_3_ek2_color"
					android:layout_marginLeft="112dp"
					android:layout_marginTop="545dp"
					android:layout_width="181dp"
					android:layout_height="38dp"
					android:text="@string/register_string"
					 />

				<ImageView android:id="@+id/circle_1"
					android:src="@drawable/circle_1"
					android:contentDescription="circle_1"
					 android:layout_marginStart="309dp"
					android:layout_marginTop="546dp"
					android:layout_width="40dp"
					android:layout_height="36dp" />

				<Button   android:id="@+id/rectangle_7"
					android:background="@drawable/rectangle_7_shape"
					 android:layout_marginStart="33dp"
					android:layout_marginTop="618dp"
					android:layout_width="324dp"
					android:layout_height="48dp"
					android:text="Don`t have an account ? Register!"
					android:textAllCaps="false"
					/>

				<TextView android:id="@+id/don_t_have_an_account___register_"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="15sp"
					android:textColor="@color/don_t_have_an_account___register__color"
					android:layout_marginLeft="28dp"
					android:layout_marginTop="612dp"
					android:layout_width="347dp"
					android:layout_height="52.5dp"
					android:text="@string/don_t_have_an_account___register__string"
					 />

				<ImageView android:id="@+id/women2_1"
					android:src="@drawable/women2_1"
					android:contentDescription="women2_1"
					 android:layout_marginStart="259dp"
					android:layout_marginTop="53dp"
					android:layout_width="152dp"
					android:layout_height="174dp" />

				<ImageView android:id="@+id/facebook_1"
					android:src="@drawable/facebook_1"
					android:contentDescription="facebook_1"
					 android:layout_marginStart="87dp"
					android:layout_marginTop="472dp"
					android:layout_width="49dp"
					android:layout_height="49dp" />

				<ImageView android:id="@+id/google_1"
					android:src="@drawable/google_1"
					android:contentDescription="google_1"
					 android:layout_marginStart="174dp"
					android:layout_marginTop="472dp"
					android:layout_width="48dp"
					android:layout_height="49dp" />

				<ImageView android:id="@+id/twitter_1"
					android:src="@drawable/twitter_1"
					android:contentDescription="twitter_1"
					 android:layout_marginStart="256dp"
					android:layout_marginTop="472dp"
					android:layout_width="49dp"
					android:layout_height="49dp" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</ScrollView>